[gd_scene load_steps=17 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Splash.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Untitled 12.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Untitled 7.png" type="Texture" id=4]
[ext_resource path="res://Sprites/NPCs/Untitled 10.png" type="Texture" id=5]
[ext_resource path="res://Nokia.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/NPCs/Untitled 8 2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Untitled 8.png" type="Texture" id=10]
[ext_resource path="res://Sprites/NPCs/Pur 1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Untitled 15.png" type="Texture" id=12]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Splash:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 133, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Splash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SplashDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Splash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Splash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 133, 116 ), Vector2( 133, 83 ) ]
}

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
start_scene = "res://02test/Room1.tscn"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -22.0
margin_right = 30.0
margin_bottom = 22.0

[node name="Splash" type="Sprite" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 133, -48 )
scale = Vector2( 3.29688, 2.90625 )
texture = ExtResource( 2 )

[node name="Start" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 13.0
margin_right = 30.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Button")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "NEW GAME"

[node name="Button" type="Button" parent="Control"]
margin_left = 98.0
margin_top = 149.5
margin_right = 158.0
margin_bottom = 158.5
focus_neighbour_bottom = NodePath("../Start")
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "LOAD GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEBUG" type="Button" parent="Control"]
margin_left = 98.0
margin_top = 163.0
margin_right = 158.0
margin_bottom = 172.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "DEBUG"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/SplashDown = SubResource( 2 )

[node name="Sprites" type="Sprite" parent="."]
position = Vector2( 62, 136 )
texture = ExtResource( 12 )

[node name="Untitled12" type="Sprite" parent="Sprites"]
position = Vector2( 142, 30 )
texture = ExtResource( 3 )

[node name="Untitled10" type="Sprite" parent="Sprites"]
position = Vector2( 113, 1 )
texture = ExtResource( 5 )

[node name="Untitled8" type="Sprite" parent="Sprites"]
position = Vector2( -25, 23 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Untitled82" type="Sprite" parent="Sprites"]
position = Vector2( 100, 20 )
texture = ExtResource( 7 )

[node name="Untitled7" type="Sprite" parent="Sprites"]
position = Vector2( 137, -8 )
texture = ExtResource( 4 )

[node name="Pur1" type="Sprite" parent="Sprites"]
position = Vector2( 20, 26 )
texture = ExtResource( 11 )

[connection signal="pressed" from="Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/DEBUG" to="." method="_on_DEBUG_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
